plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'TripPamine'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security' //스프링 시큐리티 임시 주석 처리
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.oracle.database.jdbc:ojdbc11'
    annotationProcessor 'org.projectlombok:lombok'

//	오라클 클라우드 데이터베이스 드라이버 라이브러리 추가
    implementation 'com.oracle.database.jdbc:ojdbc11:23.2.0.0'
    // 오라클 Wallet(SSO KeyStore/TLS) 필수 보안 라이브러리 추가
    implementation 'com.oracle.database.security:oraclepki:23.2.0.0'

    // JWT인증 관련 라이브러리 추가
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // Swagger UI 라이브러리 추가
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3'

    // RestTemplate 커넥션 풀 라이브러리
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.5'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jdbc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testCompileOnly 'org.projectlombok:lombok'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testAnnotationProcessor 'org.projectlombok:lombok'
    // 관리자 활동 자동 로그 기록(AOP) 라이브러리 추가
    implementation 'org.springframework.boot:spring-boot-starter-aspectj'

}

tasks.named('test') {
    useJUnitPlatform()
}
